--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,54 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.fangbo</groupId>
+	<groupId>com.palette</groupId>
 	<artifactId>entity-tool</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+  	
+	<repositories>
+		<repository>
+			<id>public</id>
+			<name>Public Repositories</name>
+			<layout>default</layout>
+			<url>http://139.196.219.132:8081/repository/maven-public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</releases>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>public</id>
+			<name>Public Repositories</name>
+			<url>http://139.196.219.132:8081/repository/maven-public/</url>
+			<layout>default</layout>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</releases>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<distributionManagement>
+		<repository>
+			<id>palette-releases</id>
+			<name>palette-releases</name>
+			<url>http://139.196.219.132:8081/repository/palette-release/</url>
+		</repository>
+		<snapshotRepository>
+			<id>palette-snapshots</id>
+			<name>palette-snapshots</name>
+			<url>http://139.196.219.132:8081/repository/palette-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
   	
     <dependencies>
         <dependency>
